css wraping on mobile bug fix

--- a/src/components/about-col/AboutColumn.scss
+++ b/src/components/about-col/AboutColumn.scss
@@ -61,7 +61,8 @@
   }
 
   @media only screen and (min-width: 48em) {
-    padding: 60px 0;
+    padding: 60px 12px;
+    max-width: 100%;
 
     ul {
       display: block;
