--- a/src/components/posts-layout/PostsLayout.scss
+++ b/src/components/posts-layout/PostsLayout.scss
@@ -13,6 +13,7 @@
 
   margin-left: 12px;
   margin-right: 12px;
+  width: 100%;
 
   @media only screen and (min-width: 48em) {
     margin-left: initial;
